# docs/swagger/openapi.yaml
@@ -12,6 +12,22 @@ components:
         error:
           $ref: '#/components/schemas/model.Error'
       type: object
+    model.PrStatus:
+      type: string
+      x-enum-varnames:
+      - PrStatusOpen
+      - PrStatusMerged
+    model.PullRequestShort:
+      properties:
+        author_id:
+          type: string
+        pull_request_id:
+          type: string
+        pull_request_name:
+          type: string
+        status:
+          $ref: '#/components/schemas/model.PrStatus'
+      type: object
     model.Team:
       properties:
         members:
@@ -64,6 +80,16 @@ components:
       required:
       - team_name
       type: object
+    users.PullRequestsAssignedToUserResponse:
+      properties:
+        pull_requests:
+          items:
+            $ref: '#/components/schemas/model.PullRequestShort'
+          type: array
+          uniqueItems: false
+        user_id:
+          type: string
+      type: object
     users.SetUserIsActiveRequest:
       properties:
         is_active:
@@ -112,7 +138,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/model.ErrorResponse'
           description: Internal Server Error
-      summary: Add Team
+      summary: Add team
       tags:
       - Teams
   /team/get:
@@ -150,7 +176,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/model.ErrorResponse'
           description: Internal Server Error
-      summary: Get Team
+      summary: Get team
       tags:
       - Teams
   /team/update:
@@ -182,9 +208,47 @@ paths:
               schema:
                 $ref: '#/components/schemas/model.ErrorResponse'
           description: Internal Server Error
-      summary: Update Team
+      summary: Update team
       tags:
       - Teams
+  /users/getReview:
+    get:
+      description: Retrieve pull requests assigned to a specific user
+      parameters:
+      - description: User ID
+        in: query
+        name: user_id
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/users.PullRequestsAssignedToUserResponse'
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/model.ErrorResponse'
+          description: Bad Request
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/model.ErrorResponse'
+          description: Not Found
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/model.ErrorResponse'
+          description: Internal Server Error
+      summary: Get pull requests assigned to user
+      tags:
+      - Users
   /users/setIsActive:
     post:
       description: Set the active status of a user
@@ -220,6 +284,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/model.ErrorResponse'
           description: Internal Server Error
-      summary: Set User Is Active
+      summary: Set user is active
       tags:
       - Users
