# internal/controller/rest/chi/users/handlers.go
@@ -5,6 +5,8 @@ import (
 	"net/http"
 
 	"github.com/mr1cloud/Avito-Reviewer/internal/controller/rest/tools"
+
+	"github.com/mr1cloud/Avito-Reviewer/internal/service/pull-request"
 	"github.com/mr1cloud/Avito-Reviewer/internal/service/user"
 
 	serviceerrors "github.com/mr1cloud/Avito-Reviewer/internal/error"
@@ -13,14 +15,16 @@ import (
 )
 
 type Handlers struct {
-	Router *chi.Mux
-	Users  user.User
+	Router       *chi.Mux
+	Users        user.User
+	PullRequests pull_request.PullRequest
 }
 
-func NewUsersHandler(users user.User) *Handlers {
+func NewUsersHandler(users user.User, pullRequests pull_request.PullRequest) *Handlers {
 	handlers := &Handlers{
-		Router: chi.NewRouter(),
-		Users:  users,
+		Router:       chi.NewRouter(),
+		Users:        users,
+		PullRequests: pullRequests,
 	}
 
 	return handlers
@@ -28,7 +32,7 @@ func NewUsersHandler(users user.User) *Handlers {
 
 // PostSetUserIsActive godoc
 //
-//	@Summary		Set User Is Active
+//	@Summary		Set user is active
 //	@Description	Set the active status of a user
 //	@Tags			Users
 //
@@ -61,5 +65,47 @@ func (h *Handlers) PostSetUserIsActive() http.HandlerFunc {
 		}
 
 		tools.RespondJSON(w, http.StatusOK, user)
+	}
+}
+
+// GetPullRequestsAssignedToUser godoc
+//
+//	@Summary		Get pull requests assigned to user
+//	@Description	Retrieve pull requests assigned to a specific user
+//	@Tags			Users
+//
+//	@Produce		json
+//	@Param			user_id	query		string	true	"User ID"
+//	@Success		200		{object}	PullRequestsAssignedToUserResponse
+//	@Failure		400		{object}	model.ErrorResponse
+//	@Failure		404		{object}	model.ErrorResponse
+//	@Failure		500		{object}	model.ErrorResponse
+//
+//	@Router			/users/getReview [get]
+func (h *Handlers) GetPullRequestsAssignedToUser() http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		userId, err := tools.GetStringQueryParam(r, "user_id", true)
+		if err != nil {
+			tools.RespondWithError(w, err.(serviceerrors.ServiceError).ErrorStatusCode(), "USER_FATAL", err.Error())
+			return
+		}
+
+		prs, err := h.PullRequests.GetPullRequestsAssignedToUser(r.Context(), userId)
+		if err != nil {
+			var srvErr serviceerrors.ServiceError
+			if errors.As(err, &srvErr) {
+				tools.RespondWithError(w, srvErr.ErrorStatusCode(), srvErr.Code(), srvErr.Error())
+			} else {
+				tools.RespondWithError(w, http.StatusInternalServerError, "FATAL", "Internal server error")
+			}
+			return
+		}
+
+		tools.RespondJSON(w, http.StatusOK,
+			PullRequestsAssignedToUserResponse{
+				UserID:       userId,
+				PullRequests: prs,
+			},
+		)
 	}
 }
